[gd_scene load_steps=38 format=3 uid="uid://bciy50bbuapon"]

[ext_resource type="Script" path="res://scripts/characters/boss.gd" id="1_jr70p"]
[ext_resource type="Texture2D" uid="uid://diguenqcvoqat" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack1.png" id="2_j1fbb"]
[ext_resource type="Texture2D" uid="uid://csreovhax6kg7" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack2.png" id="3_qcv02"]
[ext_resource type="Texture2D" uid="uid://b13chyo68mi8k" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack3.png" id="4_pw07k"]
[ext_resource type="Texture2D" uid="uid://ei5o1qnuu58g" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack4.png" id="5_ewvpv"]
[ext_resource type="Script" path="res://scripts/characters/character_facing.gd" id="6_le5ky"]
[ext_resource type="Texture2D" uid="uid://88wm35ifocgj" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack5.png" id="6_vv2bh"]
[ext_resource type="Texture2D" uid="uid://do25ap0ds3hwk" path="res://assets/interface/heart.png" id="7_3h8xh"]
[ext_resource type="Script" path="res://scripts/battle/hurt_box.gd" id="7_4plc4"]
[ext_resource type="Texture2D" uid="uid://kafwdnuneexc" path="res://assets/enemies/CyberSlime/slime_attack/slime_attack6.png" id="7_asiy1"]
[ext_resource type="Texture2D" uid="uid://bli1tvjrtvx74" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_1.png" id="8_fuqir"]
[ext_resource type="Texture2D" uid="uid://nfqn3b65c6x8" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_2.png" id="9_moh73"]
[ext_resource type="Texture2D" uid="uid://b4r7dcu6xg6tg" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_3.png" id="10_0sxip"]
[ext_resource type="Texture2D" uid="uid://ch8gkhb2agpgy" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_4.png" id="11_2gvk1"]
[ext_resource type="Texture2D" uid="uid://blq4qhjl25cmb" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_5.png" id="12_vflny"]
[ext_resource type="Texture2D" uid="uid://do2lmt8657fqt" path="res://assets/enemies/CyberSlime/slime_idle/slime_idle_6.png" id="13_135s4"]
[ext_resource type="Script" path="res://scripts/battle/hit_box.gd" id="16_m8rq8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5w2is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j1fbb")
}, {
"duration": 1.0,
"texture": ExtResource("3_qcv02")
}, {
"duration": 1.0,
"texture": ExtResource("4_pw07k")
}, {
"duration": 1.0,
"texture": ExtResource("5_ewvpv")
}, {
"duration": 1.0,
"texture": ExtResource("6_vv2bh")
}, {
"duration": 1.0,
"texture": ExtResource("7_asiy1")
}],
"loop": false,
"name": &"attack",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fuqir")
}, {
"duration": 1.0,
"texture": ExtResource("9_moh73")
}, {
"duration": 1.0,
"texture": ExtResource("10_0sxip")
}, {
"duration": 1.0,
"texture": ExtResource("11_2gvk1")
}, {
"duration": 1.0,
"texture": ExtResource("12_vflny")
}, {
"duration": 1.0,
"texture": ExtResource("13_135s4")
}],
"loop": false,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="Animation" id="Animation_yjofp"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4gyt5"]
resource_name = "attack"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_tpiwx"]
resource_name = "idle"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_820cg"]
_data = {
"RESET": SubResource("Animation_yjofp"),
"attack": SubResource("Animation_4gyt5"),
"idle": SubResource("Animation_tpiwx")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wr6q3"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_poq3f"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l3mo8"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vkuma"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xiya2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ipj3c"]
advance_mode = 2
advance_condition = &"on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oom8k"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7fn3"]
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_56200"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mi0xc"]
states/End/position = Vector2(786, 100)
states/Start/position = Vector2(205, 100)
states/idle/node = SubResource("AnimationNodeAnimation_wr6q3")
states/idle/position = Vector2(348, 100)
states/jump/node = SubResource("AnimationNodeAnimation_poq3f")
states/jump/position = Vector2(348, -25)
states/run/node = SubResource("AnimationNodeAnimation_l3mo8")
states/run/position = Vector2(512, 100)
transitions = ["idle", "jump", SubResource("AnimationNodeStateMachineTransition_vkuma"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_xiya2"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_ipj3c"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_oom8k"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_n7fn3"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_56200")]
graph_offset = Vector2(-183, -47.6311)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsgc6"]
size = Vector2(20, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig6md"]
size = Vector2(48, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3rx4"]
size = Vector2(41, 31)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kv032"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjrd5"]
bg_color = Color(1, 0.151344, 0.108333, 1)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_jr70p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5w2is")
animation = &"run"
autoplay = "idle"
offset = Vector2(10, 0)
script = ExtResource("6_le5ky")
flipped_position = Vector2(-20, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_820cg")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mi0xc")
parameters/conditions/idle = false
parameters/conditions/jumping = false
parameters/conditions/moving = false
parameters/conditions/on_floor = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
position = Vector2(20, 7)
shape = SubResource("RectangleShape2D_tsgc6")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("7_4plc4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(20, 3)
shape = SubResource("RectangleShape2D_ig6md")

[node name="Audio" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("16_m8rq8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-6.5, 9.5)
shape = SubResource("RectangleShape2D_r3rx4")

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3.0
offset_top = -17.5
offset_right = 37.0
offset_bottom = 22.5
grow_horizontal = 2
scale = Vector2(0.1, 0.1)

[node name="ProgressBar" type="ProgressBar" parent="Health"]
layout_mode = 0
offset_left = 60.0
offset_top = -65.0
offset_right = 352.0
offset_bottom = -36.0
theme_override_styles/background = SubResource("StyleBoxFlat_kv032")
theme_override_styles/fill = SubResource("StyleBoxFlat_rjrd5")
value = 50.0
show_percentage = false

[node name="Border" type="ColorRect" parent="Health"]
z_index = -15
layout_mode = 0
offset_left = 50.0
offset_top = -75.0
offset_right = 354.0
offset_bottom = -33.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = -10.0
offset_top = -85.0
offset_right = 590.0
offset_bottom = 515.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_3h8xh")

[node name="Label" type="Label" parent="Health"]
visible = false
z_index = 2
layout_mode = 0
offset_left = -14.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "100/100"
